PYTHON_FILES = applyutils.py CfgParser.py commitutils.py diffutils.py HashCache.py \
               __init__.py main.py RemoteRepo.py remoteutils.py ServerConn.py StatusLine.py \
               TransferList.py transferutils.py utils.py xzutils.py journal.py gcutils.py \
               expire.py transferbench.py

EXTRA_DIST = $(PYTHON_FILES)
